--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@handsontable/react": "^14.6.1",
+    "@mui/material": "^6.1.7",
+    "@types/handsontable": "^0.35.0",
+    "classnames": "^2.5.1",
+    "handsontable": "^14.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
