--- a/package.json
+++ b/package.json
@@ -13,18 +13,26 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@handsontable/react": "^14.6.1",
+    "@mui/icons-material": "^6.1.7",
+    "@mui/lab": "^6.0.0-beta.15",
     "@mui/material": "^6.1.7",
+    "@react-three/drei": "^9.116.2",
+    "@react-three/fiber": "^8.17.10",
+    "@tanstack/react-query": "^5.60.5",
     "@types/handsontable": "^0.35.0",
+    "astronomy-engine": "^2.1.19",
     "classnames": "^2.5.1",
     "handsontable": "^14.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.170.0",
     "@vitejs/plugin-react": "^4.3.2",
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
