--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@mui/icons-material": "^6.1.7",
     "@mui/lab": "^6.0.0-beta.15",
     "@mui/material": "^6.1.7",
+    "@mui/x-date-pickers": "^7.22.2",
     "@react-three/drei": "^9.116.2",
     "@react-three/fiber": "^8.17.10",
     "@tanstack/react-query": "^5.60.5",
     "@types/handsontable": "^0.35.0",
     "astronomy-engine": "^2.1.19",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "handsontable": "^14.6.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
